games/minecraft/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    toolkit.fluxcd.io/tenant: sre-team
