games/minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: minecraft
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      volumes:
        - name: world
          persistentVolumeClaim:
            claimName: minecraft-world
      containers:
        - name: minecraft
          image: itzg/minecraft-server
          imagePullPolicy: Always
          volumeMounts:
            - name: world
              mountPath: /data
          ports:
            - name: game-port
              containerPort: 25565
              hostPort: 25565
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
