games/minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server
  namespace: minecraft
spec:
  selector:
    app.kubernetes.io/name: minecraft-server
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
      name: game-port
