games/minecraft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: minecraft.games.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-server
                port:
                  number: 25565
  tls:
    - hosts:
        - minecraft.games.apoorva64.com
      secretName: minecraft-tls-ingress
